resolve breakpoin markers alignement

--- a/style/breakpoints.css
+++ b/style/breakpoints.css
@@ -9,7 +9,7 @@
 
 .jp-breakpoint-marker {
   position: absolute;
-  left: -35px;
+  left: -34px;
   top: -1px;
   color: var(--jp-error-color1);
 }
